; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/extr_snow_dwt.c_ff_spatial_idwt_buffered_init.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/extr_snow_dwt.c_ff_spatial_idwt_buffered_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ff_spatial_idwt_buffered_init(i32* %0, i32* %1, i32 %2, i32 %3, i32 %4, i32 %5, i32 %6) #0 {
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  store i32* %0, i32** %8, align 8
  store i32* %1, i32** %9, align 8
  store i32 %2, i32* %10, align 4
  store i32 %3, i32* %11, align 4
  store i32 %4, i32* %12, align 4
  store i32 %5, i32* %13, align 4
  store i32 %6, i32* %14, align 4
  %16 = load i32, i32* %14, align 4
  %17 = sub nsw i32 %16, 1
  store i32 %17, i32* %15, align 4
  br label %18

18:                                               ; preds = %50, %7
  %19 = load i32, i32* %15, align 4
  %20 = icmp sge i32 %19, 0
  br i1 %20, label %21, label %53

21:                                               ; preds = %18
  %22 = load i32, i32* %13, align 4
  switch i32 %22, label %49 [
    i32 128, label %23
    i32 129, label %36
  ]

23:                                               ; preds = %21
  %24 = load i32*, i32** %8, align 8
  %25 = load i32, i32* %15, align 4
  %26 = sext i32 %25 to i64
  %27 = getelementptr inbounds i32, i32* %24, i64 %26
  %28 = load i32*, i32** %9, align 8
  %29 = load i32, i32* %11, align 4
  %30 = load i32, i32* %15, align 4
  %31 = ashr i32 %29, %30
  %32 = load i32, i32* %12, align 4
  %33 = load i32, i32* %15, align 4
  %34 = shl i32 %32, %33
  %35 = call i32 @spatial_compose97i_buffered_init(i32* %27, i32* %28, i32 %31, i32 %34)
  br label %49

36:                                               ; preds = %21
  %37 = load i32*, i32** %8, align 8
  %38 = load i32, i32* %15, align 4
  %39 = sext i32 %38 to i64
  %40 = getelementptr inbounds i32, i32* %37, i64 %39
  %41 = load i32*, i32** %9, align 8
  %42 = load i32, i32* %11, align 4
  %43 = load i32, i32* %15, align 4
  %44 = ashr i32 %42, %43
  %45 = load i32, i32* %12, align 4
  %46 = load i32, i32* %15, align 4
  %47 = shl i32 %45, %46
  %48 = call i32 @spatial_compose53i_buffered_init(i32* %40, i32* %41, i32 %44, i32 %47)
  br label %49

49:                                               ; preds = %21, %36, %23
  br label %50

50:                                               ; preds = %49
  %51 = load i32, i32* %15, align 4
  %52 = add nsw i32 %51, -1
  store i32 %52, i32* %15, align 4
  br label %18

53:                                               ; preds = %18
  ret void
}

declare dso_local i32 @spatial_compose97i_buffered_init(i32*, i32*, i32, i32) #1

declare dso_local i32 @spatial_compose53i_buffered_init(i32*, i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
